// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetchAsync should fire acync fetching 1`] = `[Function]`;

exports[`fetchAsync should fire acync fetching 2`] = `[Function]`;

exports[`fill should start filling data 1`] = `
Object {
  "payload": Object {
    "name": "Comments",
  },
  "type": "COMMENTS_FILL",
}
`;

exports[`fill should start filling data 2`] = `
Object {
  "payload": Object {
    "name": "Comment",
  },
  "type": "COMMENT_FILL",
}
`;

exports[`setFetchingError should output an error 1`] = `
Object {
  "error": true,
  "payload": "We have a problem",
  "type": "COMMENTS_SET_FETCHING_ERROR",
}
`;

exports[`setFetchingError should output an error 2`] = `
Object {
  "error": true,
  "payload": "We have a problem",
  "type": "COMMENT_SET_FETCHING_ERROR",
}
`;

exports[`startFetching should start fetching 1`] = `
Object {
  "type": "COMMENTS_START_FETCHING",
}
`;

exports[`startFetching should start fetching 2`] = `
Object {
  "type": "COMMENT_START_FETCHING",
}
`;

exports[`stopFetching should stop fetching 1`] = `
Object {
  "type": "COMMENTS_STOP_FETCHING",
}
`;

exports[`stopFetching should stop fetching 2`] = `
Object {
  "type": "COMMENT_STOP_FETCHING",
}
`;
